# abcTau

./: .gitignore  LICENSE  README.md  Tutorial1_fittingAutocorrelations.ipynb  Tutorial2_visualization_modelComparison.ipynb  example_1tau_OUprocess_PSD_distLog.py  example_1tau_OUprocess_ac_distLin.py  example_2tau_inhomPoiss_ac_distLin.py  pyproject.toml
abcTau/: __init__.py  abc2Ocil.py  abc2Tau.py  abcTau_general.py  basic_functions.py  distance_functions.py  fit.py  generative_models.py  model_comparison.py  preprocessing.py  simple_abc_general.py  simple_abc_only2Tau.py  simple_abc_onlyOU2oscil.py  summary_stats.py
example_abc_results/: 1on_inhomPois_tau5_80_T1000_lag110_steps29.npy  abc_intermediate_results.npy  inhomPois_tau5_80_coeff04_T1000_trials500_deltaT1_data_mean1_data_var1.25_PSD_100samples_steps31.npy  psd_ou_tau100_T1000_fs1000_trials500_steps31.npy  psd_singOU_tau100_T1000_trials500_maxFreq500_samples100.npy
example_data/: OU_tau100_T1000_fs1000_trials500.npy  OU_tau20_T1000_trials500_deltaT1_data_mean0_data_var1.npy  OU_tau20_mean0_var1_rawData.npy  OUoscil_tau20_f2_coeff08_T1000_trials500_deltaT1_data_mean0_data_var1.npy  inhomPois_tau20_80_coeff04_T1000_trials500_deltaT1_data_mean0.3_data_var0.3324.npy  inhomPois_tau5_80_coeff04_T1000_trials500_deltaT1_data_mean1_data_var1.25.npy  psd_ou_tau100_T1000_fs1000_trials500_processed.npy  singOUoscil_tau100_f0.5_coef0.8_T1000_trials_500.npy  singOUoscil_tau100_f10_coef0.8_T1000_trials_500.npy  singOUoscil_tau100_f1_coef0.5_T1000_trials_500.npy  singOUoscil_tau100_f1_coef0.8_T1000_trials_500.npy  (+4 more)
(+52 files in other folders)
